# QuadraticDifferential

./: .gitmodules  CMakeLists.txt  QuadraticDifferential.sln  README.md
data/: eight.qd.m  eight.u.m  kitten.qd.m  kitten.u.m
project/: QuadraticDifferential.vcxproj  QuadraticDifferential.vcxproj.filters
source/: QuadraticDifferential.cpp  QuadraticDifferential.h  main.cpp
